--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <body>
         <a class="btn">+</a>
         <div class="area">
+            <div class="box" data-index="1">
+                <img src="img/cross.svg" class="delete">
+                <textarea class="note" placeholder="Введите текст заметки:" maxlength="120" id="note"></textarea>
+            </div>
         </div>
     </body>
 </html>
