modified:   css/index.css 	modified:   index.html 	modified:   js/index.js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <a class="btn">+</a>
+        <button type="button" class="btn">+</button>
         <div class="area">
         </div>
     </body>
